--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,35 @@
 {
-	"name": "briteweb/utils",
-	"version": "1.0.0",
-	"autoload" : {
-		"psr-0" : {"BW" : "."}
-	}
+  "name": "briteweb/utils",
+  "description": "Briteweb Utility Module",
+  "version": "1.0.0",
+  "authors": [
+    {
+      "name": "#BRITEWEB",
+      "email": "support@briteweb.com",
+      "homepage": "http://briteweb.com"
+    },
+    {
+      "name": "Alessandro Biavati",
+      "email": "ale@alebiavati.com",
+      "homepage": "http://alebiavati.com"
+    }
+  ],
+  "autoload" : {
+    "psr-0" : { "BW" : "src/php" }
+  },
+  "repositories": [],
+  "require": {
+    "php": ">=5.3",
+  },
+  "require-dev": {
+    "php": ">=5.4.6",
+    "ext-xdebug": "~2.0",
+    "phpunit/phpunit": "~3.7.0",
+    "phpunit/dbunit": ">=1.2",
+    "phpunit/php-invoker": "*",
+    "phpunit/phpunit-selenium": ">=1.2",
+    "phpunit/phpunit-story": "*",
+    "mockery/mockery": "~0.8.0"
+  },
+  "scripts": {}
 }
