--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   },
   "repositories": [],
   "require": {
-    "php": ">=5.3",
+    "php": ">=5.3"
   },
   "require-dev": {
     "php": ">=5.4.6",
