--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,58 @@
-# System files
-.DS_Store
+######################
+# Compiled files
+######################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
 
-# Components
+
+######################
+# Packages
+######################
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.gz
+
+
+######################
+# Logs and databases
+######################
+# We don't want any DB or Log file to be mistakenly included in git
+*.log
+*.sql
+*.sqlite
+
+
+######################
+# OS generated files
+######################
+.DS_Store*
+ehthumbs.db
+# Icon?
+Thumbs.db
+
+
+######################
+# Other files
+######################
+.svn
+*~
+.*.swp
+.tmproj
+
+
+######################
+# Packaging Systems
+######################
+# Composer (php)
 /vendor
-/bower_components
-/node_modules
-
-# Build folder
-/dist
-
-# Temporary folder
-/tmp
-
-# Logs
-/npm-debug.log
